# gfi-bot

./: .gitignore  example.secrets.toml  insignificant_features.json  pyproject.toml  settings.toml
development/: example.env  gfidev.sh
frontend/src/api/: api.ts  githubApi.ts
gfibot/: __init__.py
gfibot/backend/: auth.py  background_tasks.py  ghapp.py  models.py  scheduled_tasks.py  server.py  utils.py
gfibot/backend/routes/: _user.py  app.py  badge.py  github.py  issues.py  model.py  repos.py  user.py
gfibot/collections/: backend.py  model.py
gfibot/data/: dataset.py
gfibot/model/: predict.py  train.py  update_database.py
production/: docker-compose.yaml  example.env  frontend.caddyfile  gfibot.dockerfile
tests/: conftest.py  test_all.py
tests/backend/: test_app.py  test_badge.py  test_github.py  test_issues.py  test_model.py  test_repos.py  test_user.py
