[tool.poetry]
name = "gfi-bot"
version = "0.1.0"
description = "ML-powered 🤖 for finding and labeling good first issues in your GitHub project!"
authors = [
    "Hao He <heh@pku.edu.cn>",
    "Wenxin Xiao <wenxin.xiao@stu.pku.edu.cn>",
    "Haonan Su <haonan.su@pku.edu.cn>",
    "Runzhi He <rzhe@pku.edu.cn>",
    "Minghui Zhou <zhmh@pku.edu.cn>"
]

[tool.poetry.dependencies]
python = "^3.9"
# Utilities
toml = "^0.10.2"
tqdm = "^4.62.3"
python-dateutil = "^2.8.2"
dateutils = "^0.6.12"
multiprocess = "^0.70.13"
orjson = "^3.8.1"
dynaconf = "^3.1.11"
# MongoDB
pymongo = {version = "^3.12.3", extras = ["srv"]}
mongoengine = "^0.24.1"
mongomock = "^4.1.2"
# Network
requests = "^2.26.0"
requests_toolbelt = "^0.9.1"
PyGithub = "^1.55"
yagmail = "^0.15.277"
gql = "^3.2.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
# Machine Learning and Data Science
pandas = "~1.3.5"
numpy = "^1.21.5"
textstat = "^0.7.2"
xgboost = "~1.5.1"
lightgbm = "~3.3.2"
sklearn = "^0.0"
sentistrength = "^0.0.9"
nltk = "^3.7"
gensim = "^4.1.2"
# Scheduler
gevent = "^21.12.0"
APScheduler = "^3.9.1"
psutil = [
    { version = "^5.9.3", markers="platform_machine!='aarch64'" },
    { url = "https://github.com/ddelange/psutil/releases/download/3462518385/psutil-5.9.5-cp36-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", markers="platform_machine=='aarch64'" }
]


[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
black = "*"
pre-commit = "*"
responses = "^0.22.0"
